services/elk/templates/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default.elasticsearch
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      k8s:common.k8s.elastic.co/type: elasticsearch
  ingress:
    - toPorts:
      - ports:
        - protocol: TCP
          port: "9200"
      fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: elastic-system
